# easyRL

./: .gitignore  README.md  environment.yml  install.sh  pyproject.toml  requirements.txt
applications/g1_mjlab/: .gitignore  pyproject.toml  setup_env.sh  training_log.md
applications/g1_mjlab/docs/: pipeline_overview.md  sim2real_domain_randomization.md
applications/g1_mjlab/results/: student_dr_final.pt  student_dr_policy.onnx
applications/g1_mjlab/scripts/: benchmark_throughput.py  evaluate.py  evaluate_student.py  play.py  play_student.py  train.py
applications/g1_mjlab/src/distill/: collect_data.py  export_onnx.py  student_network.py  train_student.py
applications/g1_mjlab/src/robots/: __init__.py  g1_cfg.py
applications/g1_mjlab/src/tasks/: __init__.py
applications/g1_mjlab/src/tasks/velocity/: env_cfg.py  rl_cfg.py
applications/g1_mjlab/src/tasks/velocity/config/: __init__.py  g1_flat.py
applications/go2_mjlab/: .gitignore  pyproject.toml  training_log.md
applications/go2_mjlab/docs/: deployment_guide.md  pipeline_overview.md
applications/go2_mjlab/results/: student_policy.onnx
applications/go2_mjlab/results_r9/: events.out.tfevents.1781700161.c133dl84363757.459640.0  events.out.tfevents.1781701984.c133dl84363757.515013.0
applications/go2_mjlab/scripts/: benchmark_throughput.py  play.py  play_student.py  train.py  validate_env.py
applications/go2_mjlab/src/: __init__.py
applications/go2_mjlab/src/distill/: collect_data.py  export_onnx.py  student_network.py  train_student.py
applications/go2_mjlab/src/robots/: __init__.py  go2_cfg.py
applications/go2_mjlab/src/tasks/velocity/: env_cfg.py  rl_cfg.py
applications/vehicle_control/steering_offset_lib/: CMakeLists.txt
applications/vehicle_control/steering_offset_lib/docs/: steering-offset-algorithm-detail.md
applications/vehicle_control/steering_offset_lib/src/: steering_offset_filter.cpp
applications/vehicle_control/steering_offset_lib/test/: CMakeLists.txt  README.md  plot_sim.py  run_sim.sh  sim_main.cpp
utils/: hud.py  (+3 more)
(+229 files in other folders)
