[project]
name = "g1-mjlab"
version = "0.1.0"
description = "G1 humanoid locomotion training on mjlab (MuJoCo Warp GPU)"
requires-python = ">=3.11"
dependencies = [
    "mjlab>=1.4.0",
    "mujoco-warp>=3.8.0",
    "rsl-rl-lib>=5.2.0",
    "torch>=2.7.0",
    "warp-lang>=1.14.0",
    "tyro>=1.0.1",
    "tensorboard>=2.20.0",
]

[project.optional-dependencies]
export = ["onnxscript>=0.5.4"]
wandb = ["wandb>=0.22.3"]

